--- a/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
+++ b/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
@@ -103,6 +103,10 @@
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Code.HotBuild.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.Custom.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Custom.pdb" />
+      <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.Engines.dll" />
+      <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Engines.pdb" />
+      <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.Images.dll" />
+      <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Images.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.Services.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Services.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.WebApi.dll" />
