--- a/Src/Sxc/ToSic.Sxc.Images/ToSic.Sxc.Images.csproj
+++ b/Src/Sxc/ToSic.Sxc.Images/ToSic.Sxc.Images.csproj
@@ -36,6 +36,7 @@
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
+  <!-- Include Connect.Koi -->
   <ItemGroup>
     <Reference Include="Connect.Koi">
       <HintPath>..\..\..\Dependencies\Koi\netstandard2.0\Connect.Koi.dll</HintPath>
