--- a/Src/Sxc/ToSic.Sxc.LightSpeed/ToSic.Sxc.LightSpeed.csproj
+++ b/Src/Sxc/ToSic.Sxc.LightSpeed/ToSic.Sxc.LightSpeed.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+
   <PropertyGroup>
-    <!--<TargetFrameworks>net472;netstandard2.0;net9.0;</TargetFrameworks>-->
     <TargetFrameworks>net472;net9.0;</TargetFrameworks>
     <RootNamespace>ToSic.Sxc</RootNamespace>
-    <AssemblyName>ToSic.Sxc</AssemblyName>
+    <AssemblyName>ToSic.Sxc.LightSpeed</AssemblyName>
     <Deterministic>true</Deterministic>
-    <FileAlignment>512</FileAlignment>
+    <!--<FileAlignment>512</FileAlignment>-->
     <NoWarn>7035;CS1591</NoWarn>
     <Configurations>Debug;Release;DebugOqtane;DebugDnn</Configurations>
     <AutoGenerateBindingRedirects>False</AutoGenerateBindingRedirects>
@@ -21,67 +21,53 @@
     <!-- end: Don't generate... -->
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <!-- generate xml docs -->
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>1701;1702;CS1570;CS1572;CS1573;CS1574;CS1587;CS1591;CS1710;CS1711</NoWarn>
-  </PropertyGroup>
+  <!--<PropertyGroup>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>-->
 
-  <!-- Import common files which change how the project compiles -->
+  <!-- Import common files which change how the project compiles; AssemblyInfo from 2sxc; rest form Lib.Imports -->
   <ItemGroup>
-    <!--<Compile Include="..\ToSic.Lib.Imports\SharedAssemblyInfo.cs" Link="Properties\SharedAssemblyInfo.cs" />-->
+    <Compile Include="..\..\Sxc\ToSic.Sxc\Properties\SxcSharedAssemblyInfo.cs" Link="Properties\SxcSharedAssemblyInfo.cs" />
     <Compile Include="..\..\..\..\eav-server\ToSic.Lib.Imports\System.Runtime.CompilerServices.cs" Link="Properties\System.Runtime.CompilerServices.cs" />
     <Compile Include="..\..\..\..\eav-server\ToSic.Lib.Imports\HideInternalApisOnReleaseOnly.cs" Link="Properties\HideInternalApisOnReleaseOnly.cs" />
   </ItemGroup>
 
-
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Apps\ToSic.Eav.Apps.csproj" />
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.Core\ToSic.Eav.Core.csproj" />
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.DataSources\ToSic.Eav.DataSources.csproj" />
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.ImportExport\ToSic.Eav.ImportExport.csproj" />
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Eav.WebApi\ToSic.Eav.WebApi.csproj" />
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Sys.Core\ToSic.Sys.Core.csproj" />
-    <ProjectReference Include="..\..\..\..\eav-server\ToSic.Sys.Utils\ToSic.Sys.Utils.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="Connect.Koi">
-      <HintPath>..\..\..\Dependencies\Koi\netstandard2.0\Connect.Koi.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
     <Reference Include="System.Runtime.Caching" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.WebRequest" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Http">
+    <!--<Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />-->
+    <!--<Reference Include="System.Web" />-->
+    <!--<Reference Include="System.Web.Http">
       <HintPath>..\..\..\Dependencies\System.Web\System.Web.Http.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
-    </Reference>
+    </Reference>-->
+    <!--Note: seems to just be used for some string operations, should maybe decouple...-->
     <Reference Include="ToSic.Razor">
       <HintPath>..\..\..\Dependencies\RazorBlade\Release\net472\ToSic.Razor.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.CSharp" />
+    <!--<Reference Include="Microsoft.CSharp" />-->
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
+    <!--<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Compilers" Version="4.8.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />-->
     <PackageReference Include="System.Runtime.Caching" Version="9.0.0" />
-    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <!--<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />-->
 
+    <!--Note: seems to just be used for some string operations, should maybe decouple...-->
     <Reference Include="ToSic.Razor">
       <HintPath>..\..\..\Dependencies\RazorBlade\Release\net6.0\ToSic.Razor.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Web\Internal\LightSpeed\" />
   </ItemGroup>
 
 </Project>
