--- a/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
+++ b/Src/Dnn/ToSic.Sxc.Dnn/BuildScripts/ModulePackage.Targets
@@ -113,8 +113,12 @@
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Engines.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.Images.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Images.pdb" />
+      <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.LightSpeed.dll" />
+      <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.LightSpeed.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.Services.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Services.pdb" />
+      <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.Web.dll" />
+      <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.Web.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Sxc.WebApi.dll" />
       <AssemblyHelper Include="$(OutDir)\ToSic.Sxc.WebApi.pdb" />
       <AssemblyInclude Include="$(OutDir)\ToSic.Eav*.dll" />
