--- a/Src/Sxc/ToSic.Sxc.LightSpeed/ToSic.Sxc.LightSpeed.csproj
+++ b/Src/Sxc/ToSic.Sxc.LightSpeed/ToSic.Sxc.LightSpeed.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ToSic.Sxc.Blocks\ToSic.Sxc.Blocks.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
