change CodeDataFactory to use Interface

--- a/Src/ToSic.Sxc.SystemTests/ToSic.Sxc.SystemTests.csproj
+++ b/Src/ToSic.Sxc.SystemTests/ToSic.Sxc.SystemTests.csproj
@@ -56,6 +56,7 @@
     <ProjectReference Include="..\..\..\eav-server\ToSic.Eav\ToSic.Eav.csproj" />
     <ProjectReference Include="..\Sxc\ToSic.Sxc.Blocks\ToSic.Sxc.Blocks.csproj" />
     <ProjectReference Include="..\Sxc\ToSic.Sxc.Cms\ToSic.Sxc.Cms.csproj" />
+    <ProjectReference Include="..\Sxc\ToSic.Sxc.Code\ToSic.Sxc.Code.csproj" />
     <ProjectReference Include="..\Sxc\ToSic.Sxc.Edit\ToSic.Sxc.Edit.csproj" />
     <ProjectReference Include="..\Sxc\ToSic.Sxc.LightSpeed\ToSic.Sxc.LightSpeed.csproj" />
     <ProjectReference Include="..\Sxc\ToSic.Sxc.Services\ToSic.Sxc.Services.csproj" />
