--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -80,4 +80,8 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Edit\Toolbar\TweakButton\Internal\" />
+  </ItemGroup>
+
 </Project>
