--- a/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
+++ b/Src/Sxc/ToSic.Sxc.WebApi/ToSic.Sxc.WebApi.csproj
@@ -43,6 +43,7 @@
     <ProjectReference Include="..\ToSic.Sxc.Blocks\ToSic.Sxc.Blocks.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Code.Generate\ToSic.Sxc.Code.Generate.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.LightSpeed\ToSic.Sxc.LightSpeed.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Render\ToSic.Sxc.Render.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Services\ToSic.Sxc.Services.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
