--- a/Src/Sxc/ToSic.Sxc.Blocks/ToSic.Sxc.Blocks.csproj
+++ b/Src/Sxc/ToSic.Sxc.Blocks/ToSic.Sxc.Blocks.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
 
 
-
+  <!--TODO: @2dm - probably turn of web/razor blade again in this project!-->
   <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
     <!--<Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Net.Http" />
