WIP decoupling IBlock from remaining code

--- a/Src/Sxc/ToSic.Sxc.Code/ToSic.Sxc.Code.csproj
+++ b/Src/Sxc/ToSic.Sxc.Code/ToSic.Sxc.Code.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ToSic.Sxc.Apps\ToSic.Sxc.Apps.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Blocks\ToSic.Sxc.Blocks.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Render\ToSic.Sxc.Render.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Services\ToSic.Sxc.Services.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
