--- a/Src/Sxc/ToSic.Sxc.Render/ToSic.Sxc.Render.csproj
+++ b/Src/Sxc/ToSic.Sxc.Render/ToSic.Sxc.Render.csproj
@@ -69,4 +69,8 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Web\PageService.Internal\" />
+  </ItemGroup>
+
 </Project>
