--- a/Src/Sxc/ToSic.Sxc.Services/ToSic.Sxc.Services.csproj
+++ b/Src/Sxc/ToSic.Sxc.Services/ToSic.Sxc.Services.csproj
@@ -45,6 +45,7 @@
     <ProjectReference Include="..\ToSic.Sxc.Cms\ToSic.Sxc.Cms.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Edit\ToSic.Sxc.Edit.csproj" />
     <ProjectReference Include="..\ToSic.Sxc.Images\ToSic.Sxc.Images.csproj" />
+    <ProjectReference Include="..\ToSic.Sxc.Render\ToSic.Sxc.Render.csproj" />
     <ProjectReference Include="..\ToSic.Sxc\ToSic.Sxc.csproj" />
   </ItemGroup>
 
