wip decoupling IBlock from core APIs

--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -88,6 +88,8 @@
 
   <ItemGroup>
     <Folder Include="Code\TypedModel\" />
+    <Folder Include="Edit\Internal\" />
+    <Folder Include="Integration\Modules\" />
   </ItemGroup>
 
 </Project>
