ongoing move from core to parts

--- a/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
+++ b/Src/Sxc/ToSic.Sxc/ToSic.Sxc.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Apps\Internal\Paths\" />
     <Folder Include="Code\TypedModel\" />
     <Folder Include="Edit\Internal\" />
     <Folder Include="Integration\Modules\" />
